# leti-esoft-25-26-A1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ConsoleApp/: CMakeLists.txt  ConsoleApp.cpp
Core/: CMakeLists.txt
Core/headers/domain/model/: Address.h  DGSAdminUser.h  Employee.h  EmployeeContainer.h  NurseContainer.h  NurseUser.h  ReceptionistContainer.h  ReceptionistUser.h  Vaccine.h
Core/headers/domain/shared/: Address.h  DGSAdminUser.h  NurseContainer.h  NurseUser.h  Person.h  ReceptionistContainer.h  Result.h  StringUtils.h
Core/sources/domain/model/: Address.cpp  DGSAdminUser.cpp  Employee.cpp  EmployeeContainer.cpp  NurseContainer.cpp  NurseUser.cpp  ReceptionistContainer.cpp  ReceptionistUser.cpp  Vaccine.cpp
Core/sources/domain/shared/: Address.cpp  NurseContainer.cpp  Person.cpp  Result.cpp  StringUtils.cpp
CoreTests/: CMakeLists.txt
CoreTests/domain/model/: DGSAdminUserTests.cpp  NurseUserTests.cpp  PersonTests.cpp  ReceptionistContainerTests.cpp  ReceptionistUserTests.cpp
CoreTests/domain/shared/: DGSAdminUserTests.cpp  NurseContainerTests.cpp  NurseUserTests.cpp  PersonTests.cpp  ReceptionistUserTests.cpp  StringUtilsTests.cpp
docs/: README.md  TeamMembersAndTasks.md
docs/(template-files)/: README.md
docs/(template-files)/USXX/: USXX.md
docs/(template-files)/USXX/puml/: USXX-CD.puml  USXX-SSD.puml
docs/(template-files)/global-artifacts/: analysis.md  suplementary-specification.md  use-case-diagram.md
docs/(template-files)/global-artifacts/puml/: UCD_V0.puml
docs/system-documentation/: README.md
docs/system-documentation/US10/puml/: US10-CD.puml  US10-SSD.puml
docs/system-documentation/US11/: US11.md
docs/system-documentation/US11/puml/: US11-CD.puml  US11-DM.puml  US11-SD.puml  US11-SSD.puml
docs/system-documentation/US14/: US14.md
docs/system-documentation/US14/puml/: US14-CD.puml  US14-DM.puml  US14-SD.puml  US14-SSD.puml
docs/system-documentation/US15/: US15.md
docs/system-documentation/US15/puml/: US15-CD.puml  US15-DM.puml  US15-SD.puml  US15-SSD.puml
docs/system-documentation/global-artifacts/: README.md  glossary.md  supplementary-specification.md
docs/system-documentation/global-artifacts/US10/puml/: US10-DM.puml  US10-SD.puml
docs/system-documentation/global-artifacts/puml/: UCD_V0.puml  UCD_V1.puml  domain_model.puml
